# AnimeRenamerPP

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
AnimeRenamer/: AnimeRenamer.cpp  AnimeRenamer.h  AppGui.cpp  AppGui.h  CMakeLists.txt  GetFiles.cpp  GetFiles.h  GuiBase.cpp  GuiBase.h  main.cpp
TestCppWinrt/: CMakeLists.txt  main.cpp
